--- a/Titanic_Survival_Prediction.ipynb
+++ b/Titanic_Survival_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOS+tSOJUMcJIn/H91iaIQT",
+      "authorship_tag": "ABX9TyMRoaP+V9pycC1cwqIeK4tq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Github Connection\n"
+        "\n",
+        "> Github Connection\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Fa62NXKFCL6F"
@@ -1179,6 +1182,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Filling Missing values by replacing them with arbituary"
+      ],
+      "metadata": {
+        "id": "i4i5UrrtS0cr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "titanic_data['Embarked'].fillna(titanic_data['Embarked'].mode()[0],inplace=True)"
@@ -1635,6 +1647,15 @@
           "execution_count": 91
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Data Visualization"
+      ],
+      "metadata": {
+        "id": "Vsl9sHouS_Ec"
+      }
     },
     {
       "cell_type": "code",
@@ -2355,6 +2376,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Removing Irrelevant Data Columns"
+      ],
+      "metadata": {
+        "id": "xvYJz_6mTIRp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X= titanic_data.drop(columns=['PassengerId','Name','Ticket','Survived'],axis=1)\n",
@@ -2577,6 +2607,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Testing For Accuracy"
+      ],
+      "metadata": {
+        "id": "B4TedYWXTNQo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "train_data_accuracy= accuracy_score(Y_train,X_train_prediction)\n",
@@ -2689,7 +2728,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Enter Your Data Set :\n",
+        "**Enter Your Data Set :**\n",
         "\n",
         "> Pclass (Passenger Class) - 1st / 2nd/ 3rd\n",
         "\n",
