--- a/Titanic_Survival_Prediction.ipynb
+++ b/Titanic_Survival_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRoaP+V9pycC1cwqIeK4tq",
+      "authorship_tag": "ABX9TyM1oGjZBklXskgNTnMENEK+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1025,6 +1025,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Finding Missing Values"
+      ],
+      "metadata": {
+        "id": "pHyXaaTETtii"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -1075,7 +1084,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Handling Missing Values Handling\n"
+        " Missing Values Handling\n"
       ],
       "metadata": {
         "id": "VpkL83UFFgOz"
@@ -1091,6 +1100,15 @@
       },
       "execution_count": 83,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Replacing Missing Values with the mean"
+      ],
+      "metadata": {
+        "id": "ne9CdgZyUO1R"
+      }
     },
     {
       "cell_type": "code",
@@ -1949,6 +1967,19 @@
         "> Males - 0\n",
         "\n",
         "> Females - 1\n",
+        "\n",
+        "\n",
+        "\n",
+        "> S = Southampton (0)\n",
+        "\n",
+        "> C = Cherbourg (1)\n",
+        "\n",
+        "> Q = Queenstown (2)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
